[tool.poetry]
name = "distributed-energy-coordinator"
version = "0.1.0"
description = ""
authors = ["Tylores <tylor.slay@gmail.com>"]
readme = "README.md"
packages = [{include = "distributed_energy_coordinator"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
gridappsd-python = "2023.8.1a3"
cim-graph = "2023.8.1a0"
gridappsd-field-bus = "2023.8.1a3"
numpy = "1.21.6"
cvxpy = "1.2.5"
mosek = "10.1.12"
tabulate = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
